test/classes/initializers/compilerGenerated/outOfOrderFieldUse.good
outOfOrderFieldUse.chpl:5: error: 'y' used before defined (first used here)
